- Fixed a bug causing servers to crash
- Fixed a bug with /team rank

3.1.19
Features:
- Added team tags, so teams can have different things about their heads than their team name (#64)

Improvements: 
- Associated maxWarps with team level (#54)

Bug fixes: 
- Fixed a problem with /team promote causing error messages
- Fixed space after Team name (#58)
- Fixed Config version wrong (#61)
- Fixed maxWarps cannot be set to -1 
- Fixed Team names above 5 characters lose space (#62)
- Fixed Deleting betterteams does not remove scoreboard teams correctly (#60)
- Fixed /teama not working  (#56)

3.1.20:
Improvements 
- Added a permission node for usage of @a and @p

Bug Fixes: 
- Fixed a problem with ! not adding team prefix (#68)
- Fixed permissions for /team delhome (#70)
- Fixed /team kick (#69, #67)
- Fixed problem /team create causing a cost to be invoked (#72)

3.1.21: 
Features: 
- Added world guard flag 'teampvp' which can be used to toggle if players can pvp members of their own team (#77)

Improvements: 
- Team invites now expire after a configurable period (#81)

Bug Fixes: 
- Fixed a bug with causing team warps to break (#83)
- Fixed bug causing team levelup to take money not score (#84)
- Fixed a bug causing console spam when betterteams is initally installed (#79)
- Fixed a bug causing errors if a plyaer is not in a team with /teama score (#85) 
- Lowered the chat priority to help support PremiumChat (#75) 
- Fixed a problem with tags overwriting team colors (#81) 

3.1.22:
Bug Fixes: 
- Fixed problem with bows included in 2.1.21 (#87)

3.1.23: 
Bug Fixes:
- Fixed problem causing a space to occur at the end of the money and name placeholder (#94)
- Fixed ClassCastException with pots (#98)
- Fixed bug causing invite links to not expire correctly (#93)
- Fixed bug causing ally limits to be ignored (#100)

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
